RESOLVED FIXED219725
Fix redundant assert
https://bugs.webkit.org/show_bug.cgi?id=219725
Summary Fix redundant assert
Dmitry
Reported 2020-12-09 21:35:19 PST
Fix redundant assert
Attachments
Patch (1.76 KB, patch)
2020-12-09 21:36 PST, Dmitry
ews-feeder: commit-queue-
Dmitry
Comment 1 2020-12-09 21:36:26 PST
Ross Kirsling
Comment 2 2020-12-09 21:51:13 PST
Comment on attachment 415828 [details] Patch Seems fine to me.
EWS
Comment 3 2020-12-09 23:52:10 PST
Committed r270615: <https://trac.webkit.org/changeset/270615> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415828 [details].
Radar WebKit Bug Importer
Comment 4 2020-12-09 23:53:15 PST
Note You need to log in before you can comment on or make changes to this bug.