Fix redundant assert https://bugs.webkit.org/show_bug.cgi?id=219725

Patch by Dmitry Bezhetskov <dbezhetskov@igalia.com> on 2020-12-09
Reviewed by Ross Kirsling.

* runtime/JSArrayBufferPrototype.cpp:
(JSC::arrayBufferSlice):

Canonical link: https://commits.webkit.org/232282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270615 268f45cc-cd09-0410-ab3c-d52691b4dbfc